2010-05-20  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-kill-note-or-show-branches): Hide subtree before
	exposing the headings.

2010-05-19  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-add-planning-info): Remove the empty line also
	if there is no whitespace at all in there.

	* org-table.el (org-table-align): Fix alignment of strings
	with invisible characters.

2010-05-19  David Maus  <dmaus@ictsoc.de>

	* org.el (org-refile-cache-get): Return empty list of targets
	when cache was cleared.
	(org-clone-subtree-with-time-shift): Maybe create ID property
	in cloned subtrees.
	(org-clone-delete-id): New customization variable.
	(org-clone-subtree-with-time-shift): Use customization
	variable `org-clone-delete-id'.
	(org-clone-subtree-with-time-shift): Remove empty property
	drawer in cloned subtrees.

2010-05-17  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-refile-use-cache): New option.
	(org-refile-cache, org-refile-markers): New variable.
	(org-refile-marker, org-refile-cache-clear)
	(org-refile-cache-check-set, org-refile-cache-put)
	(org-refile-cache-get): New function.
	(org-get-refile-targets): Use the refile cache.

	* org-clock.el (org-clock-sum): Don't include running clock if
	the time block is wrong.

2010-05-16  John Wiegley  <jwiegley@gmail.com>

	* org-clock.el (org-clock-clock-in, org-clock-in): Added
	parameter `start-time'.
	(org-clock-resolve-clock): Added parameter `clock-out-time'.
	If set, and resolve-to is a past time, then the clock out
	event occurs at `clock-out-time' rather than at `resolve-to'.
	In this case, `resolve-to' becomes the clock in time.
	(org-clock-jump-to-current-clock): Created new global command
	to reveal the current clock.
	(org-clock-resolve): Added new commands g/G and j/J, and a
	help window describing all commands and their meaning.
	(org-clock-resolve-expert): New customization variable.
	(org-find-open-clocks): Fixed a bug that caused discovered